AC_PREREQ(2.60)
AC_INIT(blestack, 0.0.1)

AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_CONFIG_HEADER(config.h)

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_MAINTAINER_MODE

PKG_PROG_PKG_CONFIG

COMPILER_FLAGS

AC_INIT_BLESTACK

AC_LANG_C

AC_PROG_CC
AC_PROG_CC_PIE
AC_PROG_INSTALL

AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_ARG_BLESTACK

AC_OUTPUT(Makefile)
